<resources>
    <!-- Titles -->
    <string name="app_name">Machinetest</string>
    <string name="title_record_fragment">Record</string>
    <string name="title_monitor_fragment">Monitor</string>
    <string name="title_recording_list_fragment">Recordings</string>
    <string name="title_settings_fragment">Settings</string>
    <string name="title_audio_configuration">Audio:</string>
    <string name="title_accelerometer_configuration">Accelerometer:</string>
    <string name="title_recording_duration">Recording Duration:</string>
    <string name="title_delete_recording">Delete recording</string>
    <string name="category_sampling">Sampling</string>
    <string name="category_recording">Recording</string>
    <string name="category_monitoring">Monitoring</string>

    <!-- Dialog -->
    <string name="dialog_save_recording_as">Save recording as?</string>
    <string name="dialog_do_you_realy_want_to_delete_the_recording">Delete Recording?</string>

    <!-- Other -->
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="accelerometer_spectrogram">Acceleration Spectrogram</string>
    <string name="audio_spectrogram">Audio Spectrogram</string>
    <string name="saving_recording">Saving \'%1$s\'</string>
    <string name="accelerometer_configuration" translatable="false">%1$d \@ %2$.0fHz</string>
    <string name="audio_configuration" translatable="false">%1$d \@ %2$dHz</string>
    <string name="start_stop_monitoring">Start/Stop</string>
    <string name="record">Record</string>
    <string name="share">Share</string>
    <string name="number_of_audio_samples">Number of Audio samples</string>
    <string name="number_of_accelerometer_samples">Number of Accelerometer samples</string>
    <string name="recording_duration">Recording Duration</string>
    <string name="audio_sample_rate">Microphone sample rate</string>
</resources>
