<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:icon="@drawable/sampling"
        android:title="@string/category_sampling">
        <EditTextPreference
            android:key="audioSampleRate"
            android:title="@string/audio_sample_rate"
            app:defaultValue="44100"
            app:enabled="false"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:defaultValue="4096"
            android:entries="@array/numAudioSamplesEntries"
            android:entryValues="@array/numAudioSamples"
            android:key="numAudioSamples"
            android:title="@string/number_of_audio_samples"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:defaultValue="4096"
            android:entries="@array/numAccelSamplesEntries"
            android:entryValues="@array/numAccelsamples"
            android:key="numAccelSamples"
            android:title="@string/number_of_accelerometer_samples"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/microphone"
        android:title="@string/category_recording">
        <EditTextPreference
            android:defaultValue="10000"
            android:key="recordingDuration"
            app:title="@string/recording_duration" />
    </PreferenceCategory>
    <PreferenceCategory
        android:icon="@drawable/eye"
        android:title="@string/category_monitoring">
        <EditTextPreference
            android:defaultValue="500"
            android:key="compTimeWindow"
            app:title="Length Realtime Mean" />
    </PreferenceCategory>

</PreferenceScreen>