<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/app_bar" />

        <Button
            android:id="@+id/btn_nav_to_monitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_monitor_fragment"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <Button
            android:id="@+id/btn_nav_to_recording"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_record_fragment"
            app:layout_constraintTop_toBottomOf="@+id/btn_nav_to_monitor" />

        <Button
            android:id="@+id/btn_nav_to_recordings_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_recording_list_fragment"
            app:layout_constraintTop_toBottomOf="@+id/btn_nav_to_recording" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
